--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -20,9 +20,84 @@ a:hover { color:#000000 !important; text-decoration:none !important }
 .board_title {
     margin-bottom: 30px;
 }
-
+.board_wrap {
+    width: 1000px;
+    margin-top: 100px;
+}
 .board_title strong {
     font-size: 3rem;
+}
+.board_view {
+    width: 100%;
+    border-top: 2px solid #000;
+}
+
+.board_view .title {
+    padding: 20px 15px;
+    border-bottom: 1px dashed #ddd;
+    font-size: 2rem;
+}
+
+.board_view .info {
+    padding: 15px;
+    border-bottom: 1px solid #999;
+    font-size: 0;
+}
+
+.board_view .info dl {
+    position: relative;
+    display: inline-block;
+    padding: 0 20px;
+}
+
+.board_view .info dl:first-child {
+    padding-left: 0;
+}
+
+.board_view .info dl::before {
+    content: "";
+    position: absolute;
+    top: 1px;
+    left: 0;
+    display: block;
+    width: 1px;
+    height: 13px;
+    background: #ddd;
+}
+
+.board_view .info dl:first-child::before {
+    display: none;
+}
+.board_write .cont textarea {
+    display: block;
+    width: 100%;
+    height: 3000px;
+    padding: 15px;
+    box-sizing: border-box;
+    border: 0;
+    resize: vertical;
+}
+.board_view .info dl dt,
+.board_view .info dl dd {
+    display: inline-block;
+    font-size: 1.0rem;
+}
+
+.board_view .info dl dt {
+
+}
+
+.board_view .info dl dd {
+    margin-left: 10px;
+    color: #777;
+}
+
+.board_view .cont {
+    padding: 15px;
+    height: 500px;
+    border-bottom: 1px solid #000;
+    line-height: 160%;
+    font-size: 1.4rem;
 }
 
 .board_title p {
@@ -142,7 +217,19 @@ img{
     color: inherit;
     line-height: 1.5rem;
 }
+.board_wrap {
+    width: 1200px;
+    margin: 100px auto;
+}
 
+.board_title {
+    margin-bottom: 30px;
+}
+.write_update_delete{
+    display: flex;
+    justify-content: right;
+    margin-top: 5px;
+}
 @media only screen and (min-width: 1200px) {
     .inner {
         max-width: 1200px;
