--- a/src/main/resources/templates/write.html
+++ b/src/main/resources/templates/write.html
@@ -9,14 +9,14 @@
 <body>
 <div th:replace="/fragments/header.html :: fragment-header"></div>
 <div class="inner">
-    <form action="writerAction" method="post">
+    <form role="=form" th:action="@{/write}" th:object="${WriteForm}" id="writeForm" method="post">
         <input type="hidden" name="bdGroup" value=<%=bdGroup%>
         <input type="hidden" name="bdOrder" value=<%=bdOrder%>
         <input type="hidden" name="bdIndent" value=<%=bdIndent%>
-        <input type="text" name="bdTitle" class="form-control mt-4 mb-2"
+        <input type="text" class="form-control mt-4 mb-2" name="title" id="title"
                placeholder="제목을 입력해주세요." required>
         <div class="form-group">
-            <textarea class="form-control" rows="10" name="bdContent"
+            <textarea class="form-control" rows="10"  name="content" id="content"
                       placeholder="내용을 입력해주세요" required
             ></textarea>
         </div>
