--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -274,7 +274,48 @@ img{
 .reply-shift-arrow{
     width: 20%;
 }
-
+.policyNews {
+    width: 100%;
+    background-color: white;
+}
+.policyNews-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+.policy {
+    width: 50%;
+    height: 100%;
+    border-right: 1rem #e4e4e4;
+}
+.policy-title {
+    font-size: 1.3rem;
+    font-weight: bold;
+    color: black;
+    margin-bottom: 1rem;
+}
+.news {
+    width: 50%;
+    height: 100%;
+    border-left: 1rem #e4e4e4;
+}
+.news-title {
+    font-size: 1.3rem;
+    font-weight: bold;
+    color: black;
+    margin-bottom: 1rem;
+}
+.pn-desc {
+    color: black;
+    font-size: 1rem;
+    text-align: left;
+}
+.pn-detail {
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
 @media only screen and (min-width: 1200px) {
     .inner {
         max-width: 1200px;
