Connect_flask_api

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -105,16 +105,19 @@
                 <div class="news-title">뉴스</div>
                 <ul class="pn-desc">
                     <li class="pn-detail">
-                        <h2><a href="http://www.ikpnews.net/{{href_list[0]}}">테스트1</a></h2>
+                        <h2><a th:href="@{${'http://www.ikpnews.net/'+policy[20]}}" th:text="${policy[10]}"></a></h2>
                     </li>
                     <li class="pn-detail">
-                        <h2><a href="http://www.ikpnews.net/{{href_list[1]}}">테스트1</a></h2>
+                        <h2><a th:href="@{${'http://www.ikpnews.net/'+policy[21]}}" th:text="${policy[11]}"></a></h2>
                     </li>
                     <li class="pn-detail">
-                        <h2><a href="http://www.ikpnews.net/{{href_list[2]}}">테스트1</a></h2>
+                        <h2><a th:href="@{${'http://www.ikpnews.net/'+policy[22]}}" th:text="${policy[12]}"></a></h2>
                     </li>
                     <li class="pn-detail">
-                        <h2><a href="http://www.ikpnews.net/{{href_list[3]}}">테스트1</a></h2>
+                        <h2><a th:href="@{${'http://www.ikpnews.net/'+policy[23]}}" th:text="${policy[13]}"></a></h2>
+                    </li>
+                    <li class="pn-detail">
+                        <h2><a th:href="@{${'http://www.ikpnews.net/'+policy[24]}}" th:text="${policy[14]}"></a></h2>
                     </li>
                 </ul>
             </div>
