--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,7 +5,7 @@
     <div class="head-container">
       <div class="head-brand"><a href="/">배추도사 무도사</a></div>
       <div class="nav">
-        <li class="nav-item" id="button4">병해충</li>
+        <li class="nav-item" id="button4"><a href="/ncpms">병해충</a></li>
         <li class="nav-item" id="button5">정책/뉴스</li>
         <li class="nav-item" id="button6">
           <a href="/board">커뮤니티</a>
